<resources>
    <string name="app_name">Comyted</string>
    <string name="btn_cuentas">Cuentas</string>
    <string name="btn_contactos">Contactos</string>
    <string name="btn_plantas">Plantas</string>
    <string name="btn_ordenes">Ordenes de trabajo</string>
    <string name="btn_visitas">Visitas</string>
    <string name="btn_energy">Energy</string>
    <string name="btn_hojas">Hojas de trabajo</string>
    <string name="lblTituloVentana"></string>
    <string name="lblUsuarioConectado">usuario conectado</string>
    <string name="logo_description">LemurSolution</string>
    <string name="btn_login">Acceso</string>
    <string name="lbl_login">Usuario</string>
    <string name="prompt_email">Email</string>
    <string name="btn_password">Contraseña</string>
    <string name="lbl_password">Contraseña</string>
    <string name="action_sing_in_short">Introduzca su password</string>
    <string name="login_progress">Validando usuario</string>
    <string name="title_activity_dashboard_design">DashboardDesignActivity</string>
    <string name="btn_email">Email</string>
    <string name="btn_sms">SMS</string>
    <string name="btn_phone">&#8230;</string>
    <string name="btn_world">Mapa</string>
    <string name="incorrect_user_password">Usuario ó contraseña no válidos</string>
    <string name="inactive_user">Usuario inactivo. Consulte al Administrador</string>
    <string name="conexion_down">Conexion desactivada. Consulte al Administrador</string>
    <string name="loading">Cargando&#8230;</string>
    <string name="imageview">image</string>
    <string name="signin">Acceder&#8230;</string>
    <string name="copyright">©Copyright 2015 Gentalia, s.l</string>
    <string name="access_information">Aplicación para gestión comercial y servicios de mantenimientos. Todos los datos están bajo restricciones intrinsecas de la empresa por lo que su uso fraudulento puede llevar a acciones penales.</string>
    <string name="signinginpleasewait">Conectando. Por favor espere &#8230;</string>
    <string name="about">About Version</string>
    <string name="about_info">Aplicación Android para gestión comercial y servicios de mantenimientos. Todos los datos de Ordenes de trabajo están bajo restricciones intrinsecas de la empresa por lo que su uso fraudulento puede llevar a acciones penales.</string>
    <string name="about_info1">En caso de trabajar sin conexión las ordenes y hojas de trabajo se sincronizaran automáticamente una vez restablecida la conexion.</string>
    <string name="about_info2"></string>
    <string name="image"></string>
    <string name="menu_refresh">Actualizar</string>
    <string name="menu_search">Busar</string>
    <string name="menu_share">Compartir</string>
    <string name="error_planta">Error al mostrar la planta</string>
    <string name="error_motores">Error al mostrar los motores</string>
    <string name="action_configuracion">Configuración</string>
    <string name="action_settings">Conexión</string>
    <string name="defaulttotalvalue">00h 00m</string>
    <string name="lblorden_totaltime">Total horas:</string>
    <string name="lblmail_asunto">Asunto:(*)</string>
    <string name="lblmail_telefono">Telefono:(*)</string>
    <string name="lblmail_cc">C.C:</string>
    <string name="lblmail_cchint">Opcional&#8230;</string>
    <string name="lblmail_mensaje">Mensaje(*)</string>
    <string name="emailform_asunto_hint">tu asunto</string>
    <string name="emailform_telefono_hint">tu telefono</string>
    <string name="emailform_email_hint">tu email</string>
    <string name="emailform_mensaje_hint">Escribe aqui el mensaje que deseas enviar</string>
    <string name="emailform_nosend">El email no ha sido enviado</string>
    <string name="emailform_error">Error en el envio. Revise los datos. Stop</string>
    <string name="lbliden">Id:</string>
    <string name="lblnumero">Numero:</string>
    <string name="lblcif">C.I:F:</string>
    <string name="lblempresa">Empresa:</string>
    <string name="lbldireccion">Dirección:</string>
    <string name="lblcp">C.P.:</string>
    <string name="lblciudad">Ciudad:</string>
    <string name="lblprovincia">Provincia:</string>
    <string name="lblpais">Pais:</string>
    <string name="lbltelefono">Teléfono:</string>
    <string name="lblmovil">Movil:</string>
    <string name="lblemail">Email:</string>
    <string name="sms_nosend">El SMS no ha sido enviado</string>
    <string name="tel_nosend">El Telefono no ha sido activado</string>
    <string name="lblnombre">Nombre:</string>
    <string name="lbldpto">Dpto:</string>
    <string name="lblconexiones">Conexiones</string>
    <string name="lblservicios">Web de Servicios</string>
    <string name="lblpaginaservicios">Direccíon de Servicios Web</string>
    <string name="lblUsrlimit">Limitar a usuario</string>
    <string name="lbllimitarusuario">Mostrar datos relacionados con el usuario</string>
    <string name="lblemailconfig">Configuración emails</string>
    <string name="lblemailconfig1">Propiedades de emails</string>
    <string name="lblemailconfigdesc">Datos de conexion para el envio de emails</string>
    <string name="lblemailconfiguser">Usuario</string>
    <string name="lblemailconfigusertitle">Datos de usuario</string>
    <string name="lblemailconfigusersummary">Introduzca usuario o email del usuario</string>
    <string name="lblemailconfigpassword">Contraseña</string>
    <string name="lblemailconfigpasswordtitle">Datos de Contraseña</string>
    <string name="lblemailconfigpasswordsummary">Introduzca la contraseña del usuario</string>
    <string name="lblemailconfigsmtp">Servidor SMTP</string>
    <string name="lblemailconfigsmtptitle">Datos del Servidor SMTP</string>
    <string name="lblemailconfigsmtpsummary">Introduzca los datos Servidor SMTP</string>
    <string name="lblemailconfigport">Puerto</string>
    <string name="lblemailconfigporttitle">Datos del Puerto</string>
    <string name="lblemailconfigportsummary">Introduzca los datos del puerto del servidor SMTP</string>
    <string name="email_ok_1">email enviado</string>
    <string name="email_ok_2">correctamente</string>
    <string name="email_ok_3">en breve contactará contigo</string>
    <string name="email_ok_4">si lo prefieres puedes contactar</string>
    <string name="email_ok_5">con él por teléfono</string>
    <string name="no_ordenes">Vd no tiene Ordenes de trabajo.</string>
    <string name="lblresumen">RESUMEN</string>
    <string name="lbltiempototal_orden">Tiempo total</string>
    <string name="lblduracionreal_orden">Tiempo real</string>
    <string name="lbltiempopausa_orden">Tiempo de Pausa</string>
    <string name="lbldetalles_orden">DETALLES</string>
    <string name="lblcliente_orden">Cuenta/Cliente</string>
    <string name="lbldireccion_orden">Dirección</string>
    <string name="lblplanta_orden">Planta</string>
    <string name="lblexpdte_orden">Nº Expediente</string>
    <string name="lbltipotrabajo_orden">Tipo de trabajo</string>
    <string name="lblmotor_orden">Motor</string>
    <string name="lblnumserie_orden">Serie Nº</string>
    <string name="lblestado_orden">Estado</string>
    <string name="no_hojasorden">Esta orden no tiene hojas de trabajo.</string>
    <string name="lblFechatarea">VIE 24 DE MAY</string>
    <string name="lblHorasDia">07H 25M</string>
    <string name="lblHoraIncio">09:00</string>
    <string name="lblHoraFin">13:00</string>
    <string name="lblDescripcion">Descripcion</string>
    <string name="lblTotaltarea">04h 00m</string>
    <string name="lblfax">Fax:</string>
    <string name="lblalias">Alias:</string>
    <string name="lblmotores">Motores:</string>
    <string name="lblclienteservice">Cliente Service:</string>
    <string name="lblcontactoservice">Contacto Service:</string>
    <string name="lbloperadorservice">Operador Service:</string>
    <string name="lblnumserie">Numero de serie:</string>
    <string name="lblmodelo">Modelo:</string>
    <string name="lblcombustible">Combustible:</string>
    <string name="lblnombreplanta">Planta:</string>
    <string name="lblfechapuestamarcha">Puesta en marcha:</string>
    <string name="lblregimen">Regimen:</string>
    <string name="lblsifunciona">Está Funcionando:</string>
    <string name="lblsimantenimiento">Cto. de Mantenimiento:</string>
    <string name="lblsirespuestos">Compran Respuestos:</string>
    <string name="btn_verplanta">Ver Planta</string>
    <string name="labelempresa">Empresa:</string>
    <string name="lblfechavisita">Fecha de visita:</string>
    <string name="lblfechaalta">Fecha de alta:</string>
    <string name="lblfechalimite">Fecha limite:</string>
    <string name="lblresponsable">Responsable:</string>
    <string name="lblcontacto">Contacto:</string>
    <string name="lblestado">Estado:</string>
    <string name="btn_temas">Ver Temas</string>
    <string name="no_visitas">Vd. no tiene visitas</string>
    <string name="lblidvisita">Visita nº:</string>
    <string name="lblidtema">Tema nº:</string>
    <string name="lbltitulotema">Titulo:</string>
    <string name="lbldesarrollo">Desarrolllo:</string>
    <string name="lblpropuesta">Propuesta:</string>
    <string name="lblobservaciones">Observaciones:</string>
    <string name="no_temas">La visita no tiene temas</string>
    <string name="error_geocode">Error en coordenadas. Pruebe reiniciando el dispositivo</string>
    <string name="nombre_de_usuario_o_contrase_a_invalidos">Usuario o contraseña inválidos</string>
    <string name="error">Error</string>
    <string name="editar">Editar</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="ordenes_de_trabajo">Ordenes de trabajo</string>
    <string name="planta">planta</string>
    <string name="direccion">Dirección</string>
    <string name="numero_expediente">Nùmero de Expediente</string>
    <string name="tipo_de_trabajo">Tipo de Trabajo</string>
    <string name="motor">Motor</string>
    <string name="numero_de_serie">Numero de Serie</string>
    <string name="estado">Estado</string>
    <string name="title_activity_edit_sheet">EditSheet</string>
    <string name="hello_world">Hello world!</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvando">Salvando &#8230;</string>
    <string name="tecnico">Técnico</string>
    <string name="requerido">Requerido</string>
    <string name="refresh">Actualizar</string>
    <string name="integer">número</string>
    <string name="titulo">título</string>
    <string name="peticionario">Peticionario</string>
    <string name="cargo_region">Cargo Región</string>
    <string name="tipo_de_hoja">Tipo de Hoja</string>
    <string name="ref_pedido">Ref Pedido</string>
    <string name="horas_motor">Horas Motor</string>
    <string name="fecha">fecha</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="ciudad">Ciudad</string>
    <string name="provincia">Provincia</string>
    <string name="pais">País</string>
    <string name="telefono">Teléfono</string>
    <string name="introduzca_la_firma_del_tecnico">Introduzca la firma del técnico</string>
    <string name="firmada_por_el_cliente">Firmada por el cliente</string>
    <string name="firmada_por_el_tecnico">Firmada por el técnico</string>
    <string name="informacion">Información</string>
    <string name="salir">Salir</string>
    <string name="introduzca_la_firma_del_cliente">Introduzca la firma del cliente</string>
    <string name="la_firma_de_estas_horas_implica_su_aceptaci_n">La firma de estas horas implica su aceptación</string>
    <string name="btn_clientes">Clientes</string>
    <string name="btn_ofertas">Ofertas</string>
    <string name="btn_agenda">Agenda</string>
    <string name="btn_campaing">Campañas</string>
    <string name="fin_de_montaje">Fin de Montaje</string>
    <string name="a_z">A - Z</string>
    <string name="list_client_buscar">Buscar...</string>
</resources>