<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" >
    <PreferenceCategory android:title="@string/lblconexiones" >
        <EditTextPreference  android:dialogTitle="@string/lblservicios" 
            android:key="CONST_URL_SERVICE" 
            android:summary="@string/lblpaginaservicios" 
            android:title="@string/lblservicios" />
        <CheckBoxPreference  
            android:key="CONST_LMT_USER" 
            android:summary="@string/lbllimitarusuario" 
            android:title="@string/lblUsrlimit" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/lblemailconfig" >        
      <!--<PreferenceScreen  android:key="EMAIL_CONFIG" android:title="@string/lblemailconfig1" android:summary="@string/lblemailconfigdesc" android:persistent="false" >
            <EditTextPreference android:dialogTitle="@string/lblemailconfiguser" android:key="CONST_EMAIL_USER" android:title="@string/lblemailconfigusertitle" android:summary="@string/lblemailconfigusersummary" />
            <EditTextPreference android:dialogTitle="@string/lblemailconfigpassword" android:key="CONST_EMAIL_PASSWORD" style="@style/passwordstyle" android:title="@string/lblemailconfigpasswordtitle" android:summary="@string/lblemailconfigpasswordsummary"/>
            <EditTextPreference android:dialogTitle="@string/lblemailconfigsmtp" android:key="CONST_EMAIL_SMTP" android:title="@string/lblemailconfigsmtptitle" android:summary="@string/lblemailconfigsmtpsummary" />
            <EditTextPreference android:dialogTitle="@string/lblemailconfigport" android:key="CONST_EMAIL_PORT" android:title="@string/lblemailconfigporttitle" android:summary="@string/lblemailconfigportsummary" />
         </PreferenceScreen>
          -->
                    
       <PreferenceScreen 
            android:title="@string/lblemailconfig"
            android:summary="@string/lblemailconfigdesc"
            android:enabled="false"  >            
        </PreferenceScreen>
               
        <Preference 
           android:title="@string/informacion"
           android:icon="@drawable/infologin">
            <intent android:action="com.comyted.ABOUT" />            
       </Preference>
        
        <PreferenceScreen 
           android:key="LOGOUT"            
           android:title="@string/salir"
           android:icon="@drawable/salir" >
                        
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
