<?xml version="1.0" encoding="utf-8"?>
   
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Title -->
    <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/titulo" android:drawableLeft="@drawable/required_text_icon" />       
    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/requerido"
        android:inputType="text|textMultiLine"
        android:lines="3"
        android:textColorHint="@color/hint" />

    <!-- Tecnico -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tecnico"  android:drawableLeft="@drawable/required_text_icon" />
    <com.enterlib.widgets.FilterableSpinner
        android:id="@+id/tecnicoBox" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.DeviceDefault.Light.Spinner" />

    <!-- Planta -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/planta"  android:drawableLeft="@drawable/required_text_icon"/>
    <com.enterlib.widgets.FilterableSpinner
        android:id="@+id/plantaBox" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.DeviceDefault.Light.Spinner" />
    
    <!-- Peticionario -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/peticionario"  android:drawableLeft="@drawable/required_text_icon"/>
    <Spinner android:id="@+id/peticionario" android:layout_width="match_parent" android:layout_height="wrap_content" />
    
    <!-- Expediente -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/numero_expediente" />    
    <EditText android:id="@+id/expediente" 
        android:inputType="text"  
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"       
        android:textColorHint="@color/hint" />
    
    <!-- Trabajo -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tipo_de_trabajo" android:drawableLeft="@drawable/required_text_icon" />
    <Spinner android:id="@+id/trabajo" android:layout_width="match_parent" android:layout_height="wrap_content" />
    
    <!-- Motor -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/motor"  android:drawableLeft="@drawable/required_text_icon"/>
    <Spinner android:id="@+id/motor" android:layout_width="match_parent" android:layout_height="wrap_content" />
    
    <!-- numero de serie -->
    <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/numero_de_serie" android:drawableLeft="@drawable/required_text_icon" />    
    <EditText  android:id="@+id/num_serie" 
        		android:inputType="text"  
        		android:layout_width="match_parent" 
        		android:layout_height="wrap_content"
        		 android:hint="@string/requerido"  
        		android:textColorHint="@color/hint" />
    
    <!-- Cargo Region -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cargo_region" android:drawableLeft="@drawable/required_text_icon" />
    <Spinner android:id="@+id/cargoRegion" android:layout_width="match_parent" android:layout_height="wrap_content" />
    
    <!-- Tipo de Hoja -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tipo_de_hoja" android:drawableLeft="@drawable/required_text_icon" />
    <Spinner android:id="@+id/tipohoja" android:layout_width="match_parent" android:layout_height="wrap_content" />    
    
    <!-- Ref Pedido -->       
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ref_pedido"  />
    <EditText
        android:id="@+id/refpedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"      
        android:textColorHint="@color/hint" />
    
    
    <!-- Horas Motor -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/horas_motor"  android:drawableLeft="@drawable/required_text_icon"/>    
    <EditText
        android:id="@+id/horasmotor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/requerido"
        android:inputType="numberDecimal"
        android:textColorHint="@color/hint" />
    
    <!-- Fecha Hoja -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fecha"  android:drawableLeft="@drawable/required_text_icon"/>
    <com.enterlib.widgets.DatePickerButton android:id="@+id/fecha" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@android:drawable/edit_text" android:hint="@string/requerido" android:textColorHint="@color/hint"  style="@android:attr/buttonBarButtonStyle" />
   
	<!-- Fecha Fin Montaje -->        
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fin_de_montaje"  android:drawableLeft="@drawable/required_text_icon"/>
    <com.enterlib.widgets.DatePickerButton android:id="@+id/finmontaje" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@android:drawable/edit_text" android:hint="@string/requerido" android:textColorHint="@color/hint"  style="@android:attr/buttonBarButtonStyle" />
    
    <!-- Estado -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/estado"  android:drawableLeft="@drawable/required_text_icon"/>
    <Spinner android:id="@+id/estado" android:layout_width="match_parent" android:layout_height="wrap_content" />
    
    <!-- Direccion -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/direccion"  />
    <EditText
        android:id="@+id/client_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="2"
        android:textColorHint="@color/hint" />
    
    <!-- Cod Postal -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/codigo_postal"  />
    <EditText
        android:id="@+id/codpostal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:textColorHint="@color/hint" />
    
    <!-- Ciudad -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ciudad"  />    
    <EditText
        android:id="@+id/ciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColorHint="@color/hint" />
    
    <!-- Provincia -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/provincia"  />    
    <EditText
        android:id="@+id/provincia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColorHint="@color/hint" />
    
    <!-- Pais -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pais"  />
    <EditText
        android:id="@+id/pais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColorHint="@color/hint" />
    
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/telefono"  />    
    <EditText android:id="@+id/telefono" android:inputType="phone" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/integer"  android:textColorHint="@color/hint" />
    
</LinearLayout>

</ScrollView>


